--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,8 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1>This is my web page</h1>
+        <h1 style="color: green;">This is my web page!!</h1>
+        <h2>Hello</h2>
         Hello, world!
     </body>
 </html>
