--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,14 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <style>
+            h1 {
+                color: darkgreen;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color: green;">This is my web page!!</h1>
+        <h1>This is my web page!!</h1>
         <h2>Hello</h2>
         Hello, world!
     </body>
