--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <style>
+            h1 {
+                color: darkgreen;
+            }
+        </style>
     </head>
     <body>
         <h1>This is my web page!</h1>
